fix header z-index

--- a/src/components/organism/header/header.scss
+++ b/src/components/organism/header/header.scss
@@ -14,6 +14,8 @@ header {
 
   padding: 0 0.5em;
 
+  z-index: 1;
+
   tk-player {
     font-size: 0.4em;
 
